--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "illuminate/database": "^6"
     },
     "require-dev": {
+        "mikey179/vfsstream": "^1.6",
         "phpstan/phpstan": "^0.11.8",
         "phpunit/phpunit": "^8",
+        "psy/psysh": "^0.9.12",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
