--- a/.gitattributes
+++ b/.gitattributes
@@ -2,10 +2,12 @@
 * text=lf
 
 # Exclude unused files
+/bin export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
+/docker-compose.yml export-ignore
 /Makefile export-ignore
 /phpcs.xml export-ignore
 /phpunit.xml.dist export-ignore
