--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "illuminate/database": "^6"
+        "php": ">=7.1",
+        "doctrine/dbal": "^2.6",
+        "illuminate/database": "^5.6 | ^6"
     },
     "require-dev": {
         "mikey179/vfsstream": "^1.6",
