--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "license": "MIT",
     "keywords": [
-        "markdown"
+        "schema"
     ],
     "authors": [
         {
@@ -20,8 +20,8 @@
     },
     "require-dev": {
         "mikey179/vfsstream": "^1.6",
-        "phpstan/phpstan": "^0.11.8",
-        "phpunit/phpunit": "^8",
+        "phpstan/phpstan": "^0.12",
+        "phpunit/phpunit": "^7.5",
         "psy/psysh": "^0.9.12",
         "squizlabs/php_codesniffer": "^3.5"
     },
