--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "doctrine/dbal": "^2.6",
         "illuminate/database": "^5.6 | ^6",
         "illuminate/events": "^5.6 | ^6",
-        "laravel-bridge/scratch": "^0.1.2"
+        "illuminate/view": "^5.6 | ^6",
+        "laravel-bridge/scratch": "^0.1.2",
+        "mikey179/vfsstream": "^1.6"
     },
     "require-dev": {
-        "mikey179/vfsstream": "^1.6",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^7.5",
         "psy/psysh": "^0.9.12",
