feature: Build PHAR file and integrae GitHub Release

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,9 @@ Desktop.ini
 # Artifacts files
 /build
 /generated
+/src/Version.php
 /.phpunit.result.cache
+/docusema.phar
 
 # Tesing files
 /tests/Fixtures/sqlite.db
