--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Exclude unused files
 /bin export-ignore
+/scripts export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
