--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "illuminate/events": "^5.6 | ^6",
         "illuminate/view": "^5.6 | ^6",
         "laravel-bridge/scratch": "^0.1.2",
-        "mikey179/vfsstream": "^1.6"
+        "mikey179/vfsstream": "^1.6",
+        "symfony/console": "^4 | ^5"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
