fix: Adjust bump to a single command

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
 install:
   - composer install --prefer-dist
   # Bump the version
-  - ./scripts/bump-version bump ${TRAVIS_BRANCH}
+  - ./scripts/bump-version ${TRAVIS_BRANCH}
 
 script:
   - make test
