--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   mysql:
-    image: mysql:5.6
+    image: mysql:8
     container_name: mysql
     hostname: mysql
     volumes:
       - ./tests/Fixtures/mysql.sql:/docker-entrypoint-initdb.d/mysql.sql
+      - ./examples/examples.sql:/docker-entrypoint-initdb.d/examples.sql
     ports:
       - 3306:3306
     environment:
