--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 
 # Exclude unused files
 /bin export-ignore
+/bootstrap export-ignore
+/examples export-ignore
 /scripts export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
