Update scratch package and use logger

--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "doctrine/dbal": "^2.6",
         "illuminate/database": "^5.6 | ^6",
         "illuminate/events": "^5.6 | ^6",
+        "illuminate/log": "^5.6 | ^6",
         "illuminate/view": "^5.6 | ^6",
-        "laravel-bridge/scratch": "^0.2",
+        "laravel-bridge/scratch": "^0.3",
         "mikey179/vfsstream": "^1.6",
+        "monolog/monolog": "^1.25",
         "symfony/console": "^4 | ^5",
         "symfony/yaml": "^4 | ^5",
         "vlucas/phpdotenv": "^3"
