--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,10 @@
         "doctrine/dbal": "^2.6",
         "illuminate/database": "^5.6 | ^6",
         "illuminate/events": "^5.6 | ^6",
+        "illuminate/filesystem": "^5.6 | ^6",
         "illuminate/log": "^5.6 | ^6",
         "illuminate/view": "^5.6 | ^6",
-        "laravel-bridge/scratch": "^0.3",
+        "laravel-bridge/scratch": "^0.5",
         "mikey179/vfsstream": "^1.6",
         "monolog/monolog": "^1.25",
         "symfony/console": "^4 | ^5",
