Refactor by illuminate/console

--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
     "require": {
         "php": ">=7.1",
         "doctrine/dbal": "^2.6",
+        "illuminate/console": "^5.6 | ^6",
         "illuminate/database": "^5.6 | ^6",
         "illuminate/events": "^5.6 | ^6",
         "illuminate/filesystem": "^5.6 | ^6",
         "illuminate/log": "^5.6 | ^6",
         "illuminate/view": "^5.6 | ^6",
-        "laravel-bridge/scratch": "^0.5",
+        "laravel-bridge/scratch": "^0.5.2",
         "mikey179/vfsstream": "^1.6",
-        "mileschou/codegener": "^1.0",
+        "mileschou/codegener": "^1.0.2",
         "monolog/monolog": "^1.25",
-        "symfony/console": "^4 | ^5",
         "symfony/yaml": "^4 | ^5",
         "vlucas/phpdotenv": "^3"
     },
