Extract schema core

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ Desktop.ini
 # Artifacts files
 /build
 /generated
-/src/Version.php
+/app/Version.php
 /.phpunit.result.cache
 /schemarkdown.phar
 
