--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mileschou/schemarkdown-cli",
     "description": "The schema document generator",
-    "type": "library",
+    "type": "project",
     "license": "MIT",
     "keywords": [
         "laravel", "database"
@@ -15,21 +15,18 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "illuminate/console": "^5.6 | ^6 | ^7",
-        "illuminate/events": "^5.6 | ^6 | ^7",
-        "illuminate/log": "^5.6 | ^6 | ^7",
-        "laravel-bridge/scratch": "^1.2",
+        "php": ">=7.2",
+        "laravel-bridge/scratch": "^1.3",
         "mikey179/vfsstream": "^1.6",
-        "mileschou/codegener": "^1.0.2",
-        "mileschou/schemarkdown": "dev-master",
-        "monolog/monolog": "^1.25 | ^2",
-        "symfony/yaml": "^4 | ^5",
-        "vlucas/phpdotenv": "^3"
+        "mileschou/codegener": "^1.2",
+        "mileschou/schemarkdown": "^1.0",
+        "monolog/monolog": "^2",
+        "symfony/yaml": "^5",
+        "vlucas/phpdotenv": "^4"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
-        "phpunit/phpunit": "^7.5 | ^8.5 | ^9",
+        "phpunit/phpunit": "^8.5",
         "psy/psysh": "^0.10",
         "squizlabs/php_codesniffer": "^3.5"
     },
