--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,8 @@
 * text=lf
 
 # Exclude unused files
+/.github export-ignore
+/app export-ignore
 /bin export-ignore
 /bootstrap export-ignore
 /examples export-ignore
@@ -10,6 +12,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
+/composer.lock export-ignore
 /docker-compose.yml export-ignore
 /Makefile export-ignore
 /phpcs.xml export-ignore
